--- a/glossary.tex
+++ b/glossary.tex
@@ -22,6 +22,7 @@
 \nomenclature{\textbf{PSP}}{Pod Security Policy}
 \nomenclature{\textbf{RBAC}}{Role-Based Access Control}
 \nomenclature{\textbf{REST}}{Representational State Transfer}
+\nomenclature{\textbf{RKE}}{Rancher Kubernetes Engine}
 \nomenclature{\textbf{SaaS}}{Software as a Service}
 \nomenclature{\textbf{SOX}}{Sarbanes–Oxley Act}
 \nomenclature{\textbf{YAML}}{YAML Ain't Markup Language}
