--- a/kapitel1.tex
+++ b/kapitel1.tex
@@ -25,7 +25,7 @@ Throughout the last decade, IT operations have seen their primary focus shift fr
 
 The National Institute of Standards and Technology (NIST) defines cloud computing as "a model for enabling ubiquitous, convenient, on-demand network access to a shared pool of configurable computing resources (e.g., networks, servers, storage, applications, and services) that can be rapidly provisioned and released with minimal management effort or service provider interaction."\footnote{\textit{Mell, P. (2011)}: The NIST Definition of Cloud Computing. \cite{sp800-145}}
 
-In the early days of cloud computing, virtualization played a key role and drove adoption; a couple of years ago the focus shifted away from virtualization towards containerization. All major Hyperscalers now have container run-time offerings, managed and un-managed, based on the Kubernetes orchestration framework.
+In the early days of cloud computing, virtualization played a key role and drove adoption; a couple of years ago the focus shifted away from virtualization towards containerization. All major Hyperscalers now have container run-time offerings, managed and non-managed, based on the Kubernetes orchestration framework.
 
 Container run-time environments have their own important security aspects, as outlined by NIST in their container security guide.\footnote{See \textit{Souppaya, M. (2017)}: Application Container Security Guide. \cite{sp800-190}}
 
