--- a/kapitel2.tex
+++ b/kapitel2.tex
@@ -7,7 +7,7 @@
 
 \onehalfspacing
 
-\subsection{Container run-time environments}
+\subsection{Container Run-Time Environments}
 
 Let's start with the basics. In most of IT, Kubernetes\footnote{See \textit{The Linux Foundation (2020)}: Production-Grade Container Orchestration. \cite{kubernetes}} has emerged as the container run-time environment of choice.
 
@@ -43,7 +43,7 @@ With the increase in popularity, Kubernetes also brings new security challenges 
 
 We're observing a trend in Enterprise IT to move from traditional perimeter-based network security to more modern zero- or low-trust networks with identity-based security and temporary infrastructure. Having multiple, short-lived Kubernetes cluster is thus a likely scenario going forward.
 
-\subsection{Rancher overview}
+\subsection{Rancher Overview}
 
 What is Rancher? According to the Rancher Labs website, it is "[...] a complete software stack for teams adopting containers. It addresses the operational and security challenges of managing multiple Kubernetes clusters, while providing DevOps teams with integrated tools for running containerized workloads"\footnote{\textit{Rancher Labs (2019)}: Run Kubernetes Everywhere. \cite{rancher}}
 
@@ -68,4 +68,4 @@ In addition to the GUI, the Rancher server also provides a central Kubernetes AP
 
 More details on the Rancher architecture can be found in Rancher's technical architecture document.\footnote{See \textit{Rancher Labs (2020)}: Rancher Technical Architecture. \cite{technicalArchitecture}}
 
-I covered the aspect of segmentation in more detail in my previous FOM paper on multi-cluster management in Enterprise IT\footnote{See \textit{Frank, C. (2020)}: Multi-Cluster Management fuer Containerumgebungen .\cite{previousPaper}} in combination with a deeper introduction into Kubernetes itself. I also tried to point out, why I believe the combination of Kubernetes and Rancher is a very beneficial one, especially for Enterprise IT.
+I covered the aspect of segmentation in more detail in my previous FOM paper on multi-cluster management in Enterprise IT\footnote{See \textit{Frank, C. (2020)}: Multi-Cluster Management fuer Containerumgebungen .\cite{previousPaper}} in combination with a deeper introduction into Kubernetes itself. I also made the point that I believe the combination of Kubernetes and Rancher is a very beneficial one, especially for Enterprise IT.
