--- a/kapitel4.tex
+++ b/kapitel4.tex
@@ -7,7 +7,9 @@
 
 \onehalfspacing
 
-\subsection{Rancher hardening}
+\subsection{Kubernetes Hardening}
+
+Kubernetes provides two types of security policies, one for pod security and one for network security. Pod security policies, as the name implies, govern security-relevant aspects of pod specification,\footnote{See \textit{The Linux Foundation (2019)}: Pod Security Policies. \cite{podSecurity}} whereas network policies govern the allowed communication between groups of pods and the outside world.\footnote{See \textit{The Linux Foundation (2019)}: Network Policies. \cite{netSecurity}}
 
 Text.\footnote{See \textit{Rancher Labs (2019)}: Hardening Guide. \cite{hardeningGuide}}
 
