--- a/erklaerung.tex
+++ b/erklaerung.tex
@@ -1,5 +1,11 @@
-\newpage
+%
+%	Ehrenwoertliche Erklaerung
+%
+
+\pagebreak
+
 \pagenumbering{gobble} % Keine Seitenzahlen mehr
+\onehalfspacing
 
 %-----------------------------------
 % Ehrenwoertliche Erklärung
