--- a/kapitel1.tex
+++ b/kapitel1.tex
@@ -21,11 +21,13 @@ Throughout the remainder of the document I will use the term governance to refer
 
 \subsection{Security}
 
-Throughout the last decade, IT operations have seen their primary focus shift from an on-premise, dedicated environment to shared, on-demand infrastructure, to cloud computing.
+In the last decade, IT operations have seen their primary focus shift from an on-premise, dedicated environment to shared, on-demand infrastructure, to cloud computing.
 
 The National Institute of Standards and Technology (NIST) defines cloud computing as "a model for enabling ubiquitous, convenient, on-demand network access to a shared pool of configurable computing resources (e.g., networks, servers, storage, applications, and services) that can be rapidly provisioned and released with minimal management effort or service provider interaction."\footnote{\textit{Mell, P. (2011)}: The NIST Definition of Cloud Computing. \cite{sp800-145}}
 
-In the early days of cloud computing, virtualization played a key role and drove adoption; a couple of years ago the focus shifted away from virtualization towards containerization. All major Hyperscalers now have container run-time offerings, managed and non-managed, based on the Kubernetes orchestration framework.
+In the public cloud space, three major players have emerged: Amazon Web Services, Microsoft Azure and Google Cloud. A big contender is Alibaba Cloud who, like Huawei, struggle with their relationship to the Chinese government though.
+
+In the early days of cloud computing, virtualization played a key role and drove adoption; a couple of years ago the focus shifted away from virtualization towards containerization. All major Hyperscalers now have container run-time offerings, managed and non-managed, based on the Kubernetes orchestration framework. Google has a clear advantage here, since they are the original creators of Kubernetes.
 
 Container run-time environments have their own important security aspects, as outlined by NIST in their container security guide.\footnote{See \textit{Souppaya, M. (2017)}: Application Container Security Guide. \cite{sp800-190}}
 
