--- a/kapitel5.tex
+++ b/kapitel5.tex
@@ -7,17 +7,27 @@
 
 \onehalfspacing
 
-Infrastructure-as-Code is a good tool to enforce regulatory compliance and security hardening uniformly across all deployed Kubernetes clusters.
+Infrastructure-as-Code is the perfect tool to enforce regulatory compliance and security hardening uniformly across all deployed Kubernetes clusters.
 
-We were able to show that the combination of Terraform together with Rancher templates provide an ideal solution for Enterprise IT to provision a secure and compliant container run-time environment and manage the infrastructure life cycle.
+Terraform provides the declarative definition for the infrastructure and Rancher, through templates and access control, the necessary controls for the installation and configuration of Kubernetes itself.
 
-There are alternatives. Platform-native solutions for the major hyperscale platforms do exist, for example ARM templates on Microsoft Azure. Also, the leading on-premise virtualization platforms, VMware and Hyper-V, each have a native orchestration solution.
+The Center of Interet Security offers benchmarks, to test Kubernetes cluster against. Rancher has CIS Scans integrated and offers the ability to mitigate the findings.
+
+We were able to show that the combination of Terraform together with Rancher templates provides an ideal solution for Enterprise IT to provision a secure and compliant container run-time environment and manage the infrastructure life cycle.
+
+There are alternatives to this combination. Platform-native solutions for the major hyperscale platforms do exist, for example ARM templates on Microsoft Azure or Cloud Formation on Amazon Web Services. Also, the leading on-premise virtualization platforms, VMware and Hyper-V, each have a native orchestration solution as well.
 
 Rancher and Terraform, however, are an open-source and provider-independent
 option and thus the recommended choice.
 
-There are other open-source tools, such as the very recently released CDK8S by Amazon Web Services, but Rancher and Terraform remain the most comprehensive option.
+There are other open-source tools, such as the very recently released CDK8S by Amazon Web Services, but in my opinion Rancher and Terraform remain the most comprehensive option and ideally suited for cloud computing.
 
-New developments in the area of serverless computing threaten compute infrastructure as a distinct category itself and might obliterate the need for secure and compliant orchestration tools.
+Infrastructure automation is by no means a new invention. Procedural tools like Ansible, Chef or Operations Orchestration have been around for decades.
+
+New developments in the area of serverless computing threaten compute infrastructure as a distinct category itself and might obliterate the need for secure and compliant orchestration tools, though.
 
 Regardless of future developments, governance, risk management and regulatory compliance will remain a key topic in Enterprise IT.
+
+You can find all example plan files on my  \href{https://github.com/chfrank-cgn/Rancher/tree/master/az-cluster-1}{GitHub}.
+
+Happy Ranching!
