--- a/glossary.tex
+++ b/glossary.tex
@@ -5,10 +5,12 @@
 \renewcommand{\nomname}{List of Abbreviations}
 
 \nomenclature{\textbf{ARM}}{Azure Resource Manager}
+\nomenclature{\textbf{AWS}}{Amazon Web Services}
 \nomenclature{\textbf{CI/CD}}{Continuous Integration / Continuous Deployment}
 \nomenclature{\textbf{CIS}}{Center for Internet Security}
 \nomenclature{\textbf{CLI}}{Command-Line Interface}
 \nomenclature{\textbf{CNCF}}{Cloud Native Computing Foundation}
+\nomenclature{\textbf{GPU}}{Graphics Processing Unit}
 \nomenclature{\textbf{GRC}}{Governance, risk and compliance}
 \nomenclature{\textbf{IaaS}}{Infrastructure as a Service}
 \nomenclature{\textbf{IaC}}{Infrastructure as Code}
@@ -18,6 +20,7 @@
 \nomenclature{\textbf{K3s}}{Kubernetes on the edge}
 \nomenclature{\textbf{K8s}}{Kubernetes}
 \nomenclature{\textbf{NIST}}{National Institute of Standards and Technology}
+\nomenclature{\textbf{OS}}{Operating System}
 \nomenclature{\textbf{PaaS}}{Platform as a Service}
 \nomenclature{\textbf{PSP}}{Pod Security Policy}
 \nomenclature{\textbf{RBAC}}{Role-Based Access Control}
